--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
-# Balanced Catan Board Generator Release Notes
+# Catan Board Generator Release Notes
 
-## 0.0.1 (14 Mar 2024)
+## 0.0.1 (17 Mar 2024)
 
 * Initial release
